pyk/src/tests/unit/kore/test-data/definitions/pass/test-string-6.kore
[key{}("\u00A9")]

module TEST-STRING-6

endmodule []
