pyk/src/tests/unit/kore/test-data/definitions/fail/test-string-4.kore
[key{}("\07777")]

module TEST-STRING-4

endmodule []
